# seamule-sdk-c

./: CMakeLists.txt  LICENSE  README.md  a.out  main.c
src/: api.c  api.h  network.c  network.h  response.c  response.h  seamule-sdk.c  seamule-sdk.h  seamule.c  seamule.h
